<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/titletext"
            android:layout_width="308dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/baloo"
            android:gravity="center"
            android:text="@string/mealPlanner"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.049" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titletext">

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo"
                android:text="@string/breakfast"
                android:textColor="#5E5E5E" />

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo"
                android:text="@string/lunch"
                android:textColor="@color/textGrey" />

            <RadioButton
                android:id="@+id/radio3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo"
                android:text="@string/dinner"
                android:textColor="@color/textGrey" />

        </RadioGroup>

        <Switch
            android:id="@+id/veganSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/baloo"
            android:minHeight="48dp"
            android:text="@string/vegan"
            android:textColor="@color/textGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/drinkSpinner"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <Spinner
            android:id="@+id/drinkSpinner"
            android:layout_width="142dp"
            android:layout_height="48dp"
            android:layout_marginStart="84dp"
            android:entries="@array/drink"
            app:layout_constraintBottom_toBottomOf="@+id/drinkTitle"
            app:layout_constraintEnd_toStartOf="@+id/veganSwitch"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@+id/drinkTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/drinkTitle" />

        <TextView
            android:id="@+id/drinkTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/baloo"
            android:text="@string/Drink"
            android:textColor="@color/textGrey"
            app:layout_constraintEnd_toStartOf="@+id/drinkSpinner"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <TextView
            android:id="@+id/sauceTitle"
            android:layout_width="187dp"
            android:layout_height="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/baloo"
            android:text="@string/drink"
            android:textColor="@color/textGrey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/drinkSpinner" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/baloo"
            android:text="@string/syrup"
            android:textColor="@color/textGrey"
            app:layout_constraintEnd_toStartOf="@+id/checkBox3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/checkBox1"
            app:layout_constraintTop_toBottomOf="@+id/sauceTitle" />

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/baloo"
            android:text="@string/mustard"
            android:textColor="@color/textGrey"
            app:layout_constraintStart_toEndOf="@+id/checkBox4"
            app:layout_constraintStart_toStartOf="@+id/checkBox2"
            app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/baloo"
            android:text="@string/hotsauce"
            android:textColor="@color/textGrey"
            app:layout_constraintStart_toStartOf="@+id/checkBox1"
            app:layout_constraintTop_toBottomOf="@+id/checkBox1" />

        <CheckBox
            android:id="@+id/checkBox6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/baloo"
            android:text="@string/whippedCream"
            android:textColor="@color/textGrey"
            app:layout_constraintStart_toStartOf="@+id/checkBox3"
            app:layout_constraintTop_toBottomOf="@+id/checkBox3" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/baloo"
            android:text="@string/ketchup"
            android:textColor="@color/textGrey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sauceTitle" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="65dp"
            android:fontFamily="@font/baloo"
            android:text="@string/ranch"
            android:textColor="@color/textGrey"
            app:layout_constraintEnd_toEndOf="@+id/veganSwitch"
            app:layout_constraintStart_toEndOf="@+id/sauceTitle"
            app:layout_constraintTop_toBottomOf="@+id/sauceTitle" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/baloo"
            android:onClick="createMeal"
            android:text="@string/reveal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox5" />

        <ImageView
            android:id="@+id/foodImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="120dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/foodText" />

        <TextView
            android:id="@+id/foodText"
            android:layout_width="299dp"
            android:layout_height="62dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/baloo"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/foodText"
            android:textAlignment="gravity"
            android:textColor="@color/textGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"
            tools:text="you should eat " />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
